# sdss-spectra-classification

./: .gitignore  GETTING_STARTED.md  README.md  analysis.py  config.py  load_data.py  main.py  pyproject.toml  requirements.txt  sdss_analysis.ipynb  setup.py
lab-notes/: 01-lessons-learned.md  02-future-work.md  03-why-misclassifications-happen.md
