[project]
name = "sdss-spectral-analysis"
version = "0.1.0"
description = "SDSS spectral classification and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "ipykernel>=6.0.0",
]
